[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/SoulsCollected.png" type="Texture" id=1]
[ext_resource path="res://assets/EmptySoul.png" type="Texture" id=2]
[ext_resource path="res://SoulsCollected.gd" type="Script" id=3]
[ext_resource path="res://Souls/PNG/32x32/tile000.png" type="Texture" id=4]

[node name="SoulsCollected" type="Node2D"]
script = ExtResource( 3 )
emptySoul = ExtResource( 2 )
fullSoul = ExtResource( 4 )
scale2 = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 32, 0 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 48, 0 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 64, 0 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 80, 0 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 96, 0 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 112, 0 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )
